// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHighlight behavior loose matching matches strings with different casing 1`] = `
.emotion-0 {
  background-color: rgba(0,119,204,0.1);
  font-weight: 700;
  color: #343741;
}

<span>
  different 
  <span
    class="euiScreenReaderOnly"
  >
    highlight start
  </span>
  <mark
    class="euiMark emotion-0"
  >
    case
  </mark>
  <span
    class="euiScreenReaderOnly"
  >
    highlight end
  </span>
   match
</span>
`;

exports[`EuiHighlight behavior matching applies to all matches 1`] = `
.emotion-0 {
  background-color: rgba(0,119,204,0.1);
  font-weight: 700;
  color: #343741;
}

<span>
  <span
    class="euiScreenReaderOnly"
  >
    highlight start
  </span>
  <mark
    class="euiMark emotion-0"
  >
    match
  </mark>
  <span
    class="euiScreenReaderOnly"
  >
    highlight end
  </span>
   
  <span
    class="euiScreenReaderOnly"
  >
    highlight start
  </span>
  <mark
    class="euiMark emotion-0"
  >
    match
  </mark>
  <span
    class="euiScreenReaderOnly"
  >
    highlight end
  </span>
   
  <span
    class="euiScreenReaderOnly"
  >
    highlight start
  </span>
  <mark
    class="euiMark emotion-0"
  >
    match
  </mark>
  <span
    class="euiScreenReaderOnly"
  >
    highlight end
  </span>
</span>
`;

exports[`EuiHighlight behavior matching only applies to first match 1`] = `
.emotion-0 {
  background-color: rgba(0,119,204,0.1);
  font-weight: 700;
  color: #343741;
}

<span>
  <span
    class="euiScreenReaderOnly"
  >
    highlight start
  </span>
  <mark
    class="euiMark emotion-0"
  >
    match
  </mark>
  <span
    class="euiScreenReaderOnly"
  >
    highlight end
  </span>
   match match
</span>
`;

exports[`EuiHighlight behavior strict matching doesn't match strings with different casing 1`] = `
<span>
  different case match
</span>
`;

exports[`EuiHighlight is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  value
</span>
`;
